[gd_scene load_steps=13 format=3 uid="uid://c52nobjse0mpc"]

[ext_resource type="Texture2D" uid="uid://d1heh2edqed3d" path="res://Levels/sprites/box_mask.png" id="1_8bg02"]
[ext_resource type="PackedScene" uid="uid://bx0tw6jqlatg" path="res://grid/fruit_grid.tscn" id="2_a3x75"]
[ext_resource type="Texture2D" uid="uid://dj8m5m0b5rxdr" path="res://Levels/sprites/bg.png" id="3_ow4ws"]
[ext_resource type="Script" path="res://Levels/person_container.gd" id="4_way32"]
[ext_resource type="Script" path="res://Levels/smoothie_container.gd" id="5_te1i1"]
[ext_resource type="Texture2D" uid="uid://bhws5a0stmgvm" path="res://Levels/sprites/verticalprototype.png" id="6_rjuc8"]
[ext_resource type="Script" path="res://orders/order_generator.gd" id="7_1lt0w"]
[ext_resource type="Script" path="res://orders/order_grid.gd" id="8_5den4"]
[ext_resource type="PackedScene" path="res://MenuUtilities/PauseButton.tscn" id="9_ynoko"]
[ext_resource type="Script" path="res://MenuUtilities/ScoreLabel.gd" id="10_vyeob"]
[ext_resource type="AudioStream" uid="uid://d2mmi0p5uveku" path="res://Audio/[HookSounds] Elegant Jazz-[AudioTrimmer.com].mp3" id="11_tns1p"]

[sub_resource type="LabelSettings" id="LabelSettings_54xkj"]
font_size = 30
font_color = Color(0.494118, 0.576471, 0.443137, 1)

[node name="Level" type="Node2D"]

[node name="BoxBG" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-518, 231)
scale = Vector2(1.66, 1.66)
texture = ExtResource("1_8bg02")
centered = false

[node name="FruitGrid" parent="." instance=ExtResource("2_a3x75")]
position = Vector2(15, 299)

[node name="Beach" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(50, 38)
texture = ExtResource("3_ow4ws")
centered = false

[node name="People" type="Node2D" parent="Beach"]
script = ExtResource("4_way32")

[node name="Smoothies" type="Node2D" parent="Beach"]
script = ExtResource("5_te1i1")

[node name="LevelBG" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("6_rjuc8")
centered = false

[node name="OrderGenerator" type="Node" parent="."]
script = ExtResource("7_1lt0w")

[node name="EmptyRackTimer" type="Timer" parent="OrderGenerator"]
wait_time = 1.5
one_shot = true
autostart = true

[node name="FullRackTimer" type="Timer" parent="OrderGenerator"]
wait_time = 20.0
one_shot = true
autostart = true

[node name="HardOrderTimer" type="Timer" parent="OrderGenerator"]
wait_time = 30.0
one_shot = true
autostart = true

[node name="OrderHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TicketLine" type="Marker2D" parent="OrderHUD"]
position = Vector2(271, 179)
script = ExtResource("8_5den4")

[node name="Button" parent="OrderHUD" instance=ExtResource("9_ynoko")]
layout_mode = 0

[node name="ScoreLabel" type="Label" parent="OrderHUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -131.0
offset_right = 336.0
offset_bottom = -56.0
grow_vertical = 0
text = "Score: 0"
label_settings = SubResource("LabelSettings_54xkj")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_vyeob")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_tns1p")
volume_db = -30.0
autoplay = true

[connection signal="timeout" from="OrderGenerator/EmptyRackTimer" to="OrderGenerator" method="_on_empty_rack_timer_timeout"]
[connection signal="timeout" from="OrderGenerator/FullRackTimer" to="OrderGenerator" method="_on_full_rack_timer_timeout"]
[connection signal="timeout" from="OrderGenerator/HardOrderTimer" to="OrderGenerator" method="_on_hard_order_timer_timeout"]
